assets/css/styles.css
html {
	height: 100%;
	scroll-behavior: smooth;
}

body {
	color: #FFF;
	height: 100%;
	margin: 0;
	background-color: #000;
}

/* LANDING PAGE */

.landing .Superheading {
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-between;
	margin: 0vh 0 0vh 1vh;
}

.landing .parallax {
	perspective: 1px;
	height: 100%;
	overflow-x: hidden;
	overflow-y: hidden;
	scroll-behavior: smooth;
}

a {
	text-decoration: none;
	color: #FFF;
}

a:hover {
	text-decoration: line-through;
}

a:focus {
	outline: none;
}

/*Big LOVE Titles*/

h1, h2, h3, h4 {
	margin: 0;
	padding: 0;
}

h1 {
	font: normal 13vw/95% "Love", sans-serif;
}

/*Artist Names and Links to Works*/

h2 {
	font: normal normal normal 2.4rem/120% "Helvetica", sans-serif;
}

/* Small LOVE names of works*/
h3 {
	font: normal 8vw/100% "Love", sans-serif;
}

h3 a:hover {
	text-decoration: none;
}

/* Text Subtitles*/
h4 {
	font: normal normal normal 2.4rem/110% "Helvetica", sans-serif;
	padding: 0;
	margin-bottom: 2rem;
}

/*Body Text*/
p {
	font: normal normal normal 2.4rem/110% "Helvetica", sans-serif;
	padding: 0;
	margin-top: 0;
}

.backArrow {
	font-size: 4rem;
	position: absolute;
	top: 0;
	left: 0;
}

.grid-container {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
	padding: 2rem;
}

/*Header*/

.Header {
	grid-column-start: 1;
	grid-column-end: 6;
}

.Superheading {
	display: flex;
	flex-flow: row nowrap;
	justify-content: flex-start;
	margin: 0vh 0 0vh 1vh;
}

.Heading {
	min-height: 50vh;
	cursor: pointer;
}

#countdown {
text-align: right;
}

#mobileCountdown {
	position: absolute;
	bottom: 3vw;
	right: 3vw;
	text-align: right;
}

#mobileDate {
	position: absolute;
	bottom: 3vw;
	left: 3vw;
	text-align: left;
}

#date {
	position: absolute;
	bottom: 3vw;
	right: 3vw;
	text-align: right;}

/*Main*/

.Main {
	margin: 50vh 4vh 0vh 1vh;
}

.Home.Names {
	grid-column-start: 1;
	grid-column-end: 3;
}

.Names {
	grid-column-start: 1;
	grid-column-end: 4;
}

.Blurb {
	grid-column-start: 3;
	grid-column-end: 6;
}

/* Footer */

.Footer {
	grid-column-start: 1;
	grid-column-end: 6;
	display: flex;
	flex-flow: row;
	justify-content: flex-start;
	align-items: center;
	margin-top: 7vh;
}

.Footer img {
	width: 10vw;
	height: auto;
	margin-right: 4rem;
 }


/*Overlay*/

.parallax {
	perspective: 1px;
	height: 100%;
	overflow-x: hidden;
	overflow-y: auto;
}

.parallax__layer {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

/* foreground */
.parallax__layer--base {
	transform: translateZ(-1px) scale(2);
	/* -webkit-transform: translateZ(-1px) scale(2); */
	pointer-events: none;
}

.parallax__layer--base img {
	width: 100vw;
	margin-top: -1rem;
}

.parallax__layer--back {
	transform: translateZ(0) scale(1);
	z-index: 100;
}

/* background  */
.parallax__layer--deep {
	transform: translateZ(-2px) scale(3);
	pointer-events: none;
}

.parallax__layer--deep img {
	width: 100vw;
}

/* Artist Menu General */

.artistItem {
	display: flex;
	flex-flow: row;
	margin: 5rem 0 5rem 0;
}

.artistItem img {
	max-height: 50vh;
	max-width: 40vw;
}

.artistThumbnail {
	margin: 0;
}

.artistInfo {
	margin-bottom: 1rem;
}

.artistName {
	margin-bottom: 0.5rem;
}


/* Artist Item Positions */

.artistLeft {
	grid-column-start: 1;
	grid-column-end: 6;
}

.artistLeft * {
	flex-flow: row;
	text-align: left;
}

.artistLeft .artistInfo {
	margin: 0 0 0 1rem;
}

.artistMiddle {
	grid-column-start: 1;
	grid-column-end: 5;
}

.artistMiddle .artistItem {
	flex-flow: column;
	align-items: flex-end;
	text-align: right;
}

.artistMiddle .artistInfo * {
	margin: 1rem 0 0 0;
	text-align: right;
}

.artistRight {
	grid-column-start: 1;
	grid-column-end: 6;
}

.artistRight .artistItem {
	flex-flow: row;
	justify-content: flex-end;
}

.artistRight .artistItem * {
	text-align: right;
}

.artistRight .artistThumbnail {
	margin: 0 0 0 1rem;

}

/*Artist Pages*/

.Work {
	display: grid;
	grid-column-start: 1;
	grid-column-end: 6;
	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
	margin-top: 50vh;
	margin-bottom: 50vh;
}

.Work iframe {
	grid-column-start: 1;
	grid-column-end: 6;
	height: 100vh;
}

.videoWrapper {
	position: relative;
	grid-column-start: 1;
	grid-column-end: 6;
	padding-bottom: 56.25%; /* 16:9 */
	height: 0;
}

.videoWrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.imageWrapper {
	margin: 0;
	grid-column-start: 1;
	grid-column-end: 6;
	text-align: center;
}

.image {
	grid-column-start: 1;
	grid-column-end: 6;
	text-align: center;
}

.image img {
	margin: 0 0 50vh 0;
	max-width: 100%;
}

.imageWrapper img {
	margin: 0 0 50vh 0;
	max-width: 100%;
	text-align: center;
	max-height: 90vh;
}

.imageL {
	margin-bottom: 50vh;
	grid-column-start: 1;
	grid-column-end: 6;
	width: 60vw;
	max-height: 90vh;
	/* max-height: 80vh; */
}

.imageR {
	margin-bottom: 50vh;
	grid-column-start: 1;
	grid-column-end: 6;
	max-width: 70vw;
	max-height: 90vh;
	justify-self: end;
}

.imageL img {
	width: auto;
	max-height: inherit;
	max-width: inherit;
}

.imageR img {
	width: auto;
	max-height: inherit;
	max-width: inherit;
	float: right;
}

.imageL a {
	width: auto;
	max-height: inherit;
	max-width: inherit;
}

.imageR a {
	width: auto;
	max-height: inherit;
	max-width: inherit;
	float: right;
}

/*.imageL * {
	margin-bottom: 50vh;
	grid-column-start: 1;
	grid-column-end: 6;
	width: 60vw;
}

.imageR * {
	margin-bottom: 50vh;
	grid-column-end: 6;
	width: 60vw;
}*/

.Statement {
	margin-top: 50vh;
	grid-column-start: 1;
	grid-column-end: 4;
}

.Portal {
	grid-column-start: 3;
	grid-column-end: 6;
	margin: 50vh 0 50vh 0;
	text-align: center;
}

.Portal img {
	position: static;
	height: 20vh;
}

.Bio {
	margin-top: 50vh;
	grid-column-start: 3;
	grid-column-end: 6;
}

/*Emma*/

.Emma-Video {
	position: relative;
	grid-column-start: 1;
	grid-column-end: 6;
	margin-top: 50vh;
	display: grid;
	grid-template-columns: 1fr 1fr;
	position: relative;
	cursor: pointer;
}

.Emma-Overlay {
	width: 100%;
	height: 100%;
	position: absolute;
	color: red;
	z-index: 100;
}

.Emma-videoWrapper {
	position: relative;
	padding-bottom: 56.25%; /* 16:9 */
	height: 0;
}

.Emma-videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* Animation */

.fade-in {
	animation: fadeIn ease 0.5s;
	-webkit-animation: fadeIn ease 0.5s;
	-moz-animation: fadeIn ease 0.5s;
	-o-animation: fadeIn ease 0.5s;
	-ms-animation: fadeIn ease 0.5s;
}

@keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

@-moz-keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

@-webkit-keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

@-o-keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

@-ms-keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

/* Desktop */

.Mobile {
	display: none;
}

.Tablet {
	display: none;
}

/* Mobile *//* Mobile *//* Mobile *//* Mobile *//* Mobile *//* Mobile *//* Mobile *//* Mobile */

@media all and (max-width: 800px) {

	h2, h4, p {
		font-size: 25px;
	}

	h1 {
		font-size: 11vh;
		word-break: break-word;
	}

	h3 {
		font-size: 6.5vh;
	}

	.grid-container {
		padding: 4vw 3vw 3vw 3vw;
	}

	.Main {
		margin: 50vh 0 0 0;
	}

	.Names {
		grid-column-start: 1;
		grid-column-end: 6;
	}

	.Blurb {
		grid-column-start: 1;
		grid-column-end: 6;
		margin-bottom: 50vh;
	}

	/* Artist Menu General */

	.artistItem {
		display: flex;
		flex-flow: column;
		justify-content: center;
		align-content: center;
		margin: 0;
	}

	.artistItem img {
		width: 100%;
		height: auto;
		max-width: 100vw;
	}

	.artistTitle {
		margin: 0rem 0rem 0rem 2rem;
	}

	.artistInfo {
		margin: 1rem 0 1rem 0rem;
	}

	.artistName {
		margin: 0;
	}

	.artistTitle {
		margin: 0;
	}

	/* Artist Item Positions */

	.artistLeft {
		grid-column-start: 1;
		grid-column-end: 6;
	}

	.artistLeft * {
		flex-flow: column;
	}

	.artistLeft .artistInfo {
		margin: 1rem 0 1rem 0rem;
	}

	.artistMiddle {
		grid-column-start: 1;
		grid-column-end: 6;
	}

	.artistMiddle .artistItem {
		justify-content: center;
		align-content: center;
		align-items: stretch;
	}

	.artistMiddle .artistInfo * {
		margin: 0 0 0 0;
		text-align: left;
	}

	.artistMiddle .artistInfo {
		margin: 1rem 0 1rem 0rem;
		text-align: left;
	}

	.artistRight {
		grid-column-start: 1;
		grid-column-end: 6;
	}

	.artistRight .artistItem {
		flex-flow: column;
		justify-content: flex-start;
	}

	.artistRight .artistItem * {
		text-align: left;
	}

	.artistRight .artistThumbnail {
		margin: 0 0 0 0rem;
	}

	/* Artist Page */

	.Statement {
		grid-column-start: 1;
		grid-column-end: 6;
	}

	.Bio {
		grid-column-start: 1;
		grid-column-end: 6;
	}

	.imageL {
		width: 80vw;
		max-width: 80vw;
	}

	.imageR {
		width: 80vw;
		max-width: 80vw;
	}


/*Footer*/
	.Footer {
		margin: 20vh 1rem 0 0rem;
	}

	.Footer img {
		width: 30vw;
		height: auto;
		margin-right: 1rem;
	}

	.Mobile {
		display: block;
	}

	.Tablet {
		display: block;
	}

	.Desktop {
		display: none;
	}
}

@media all and (max-width: 1100px) and (min-width: 800px)  {

	h1 {
		font-size: 18vw;
	}

	.Header {
		grid-column-start: 1;
		grid-column-end: 6;
	}

	.Mobile {
		display: none;
	}

	.Tablet {
		display: block;
	}

	.Desktop {
		display: block;
	}
}

